[package]
name = "string-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "no-std-compat/std",
    "memchr/std",
]

[dependencies]
no-std-compat = { version = "0.4.1", default-features = false, features = ["alloc"] }
memchr = { version = "2.5.0", default-feature = false }
