[package]
name = "string-ring"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/string-ring"
documentation = "https://docs.rs/string-ring"
description = "A circular string buffer with character- and line-level granularity"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = [
    "no-std-compat/std",
    "memchr/std",
]

[dependencies]
no-std-compat = { version = "0.4.1", default-features = false, features = ["alloc"] }
memchr = { version = "2.5.0", default-feature = false }
